<resources>

    <string name="SignInSuccess">You have successfully logged in!</string>
    <string name="Resume">Resume</string>
    <string name="account">Account</string>
    <string name="menu">Menu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="about">Info</string>
    <!-- Strings used for fragments for navigation -->
    <string name="salesFragment">Sales</string>
    <string name="nomenclatureFragment">Nomenclature</string>
    <string name="costFragment">Cost</string>
    <!-- Окно регистрации -->
    <string name="link_done">The merging of accounts was successful</string>
    <string name="reg_title">Registration</string>
    <string name="reg_not">Log in or register!</string>
    <string name="reg_btnreg">Register</string>
    <string name="reg_forgotpsw">Forgot your password?</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_login">Authorization</string>
    <string name="reg_logout">Log Out</string>
    <string name="reg_error">Error during registration</string>
    <string name="reg_signInerror">Login error</string>
    <string name="reg_reset_password">The link for password recovery has been sent to your Email</string>
    <string name="send_verification_error">Failed to send Email confirmation link</string>
    <string name="send_verification_done">An email has been sent to your email with a link to confirm the Email</string>
    <!-- Окно редактирования -->
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="photo">Photo</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="quantity">Quantity</string>
    <string name="select_images_title">Select images</string>
    <!-- ProgressBar -->
    <string name="loading">Loading…</string>

    <string name="add">Add</string>
    <string name="uploadPhoto">Please wait…</string>
    <string name="search">Search</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="minDate">Min</string>
    <string name="maxDate">Max</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="sum">Sum</string>
    <string name="Hello">Welcome!</string>
    <string name="reg_loginBtn">Log In</string>
    <string name="edit">Edit</string>
    <string name="sell">Sell</string>
    <string name="paymethod">Payment method</string>
    <string name="cash_coefficient">Cash</string>
    <string name="cash_coefficient_summary">Commission from cash</string>
    <string name="visa_coefficient">Card</string>
    <string name="visa_coefficient_summary">Commission from Card</string>
    <string name="product_category">Category settings</string>
    <string name="fabric_coefficient">Category</string>
    <string name="fabric_coefficient_summary">Category commission</string>
    <string name="percent">Percent</string>
    <string name="commission">Percent</string>
    <string name="cash">Cash</string>
    <string name="visa_mastercard">Visa/MasterCard</string>
    <string name="or">OR</string>
    <string name="filter">Filter</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>

    <!-- Messages Preferences -->
    <string name="language">Language</string>
    <string name="theme">Theme</string>

    <!-- Default values for settings -->
    <string name="default_language">en</string>
    <string name="default_theme">auto</string>
    <string name="error_field_required">The field cannot be empty</string>
    <string name="error_saving_in_the_database">Error when adding a category</string>

    <!-- Dialog titles -->
    <string name="select_language">Select Language</string>
    <string name="select_theme">Select Theme</string>

    <!-- Новая Категория -->
    <string name="title_new_category">New Category</string>
    <string name="category_name">Category</string>
    <string name="choose_your_picture">Choose your picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!-- Запрос разрешений -->
    <string name="permissions_required">Permissions Required</string>
    <string name="permissions_discription">This app requires camera and storage permissions to function correctly.</string>
    <string name="permissions_grant">Grant Permissions</string>
    <string name="permissions_cancel">Cancel</string>

    <!-- О программе -->
    <string name="app_name">Jewintage</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="contacts">Contacts</string>
    <string name="ok">OK</string>
    <string name="name_app">App</string>
    <string name="edit_commission">Edit commission for %1$s</string>
    <string name="warning_commission">Please enter a valid commission between 0 and 100</string>
    <string name="warning_description">Exceeded the maximum number of characters</string>
    <string name="exit">Exit</string>
    <string name="close_app_message">Are you sure you want to close this App?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="total">Total:</string>
    <string name="_0_0">0.0</string>
    <string name="revenue">Revenue</string>
    <string name="update_completed_successfully">The update was completed successfully!</string>
    <string name="update_incompleted_successfully">Update failed!</string>
    <string name="update">Update</string>


</resources>