<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu">
        <menu>
            <item
                android:title="@string/salesFragment"
                android:id="@+id/salesFragment"/>
            <item
                android:title="@string/nomenclatureFragment"
                android:id="@+id/nomenclatureFragment"/>
            <item
                android:title="@string/costFragment"
                android:id="@+id/costFragment"/>

        </menu>
    </item>
    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/signin"
                android:icon="@drawable/google_button"
                android:title="@string/reg_login" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/reg_logout" />
            <item
                android:id="@+id/register"
                android:title="@string/reg_title" />

        </menu>
    </item>


</menu>